docs: add 4K demo video